--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+     "start": "node index.js",
+      "build": "ng build",
+       "heroku-postbuild": "ng build --prod"
+       
   },
   "author": "",
   "license": "ISC",
