--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node index.js",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +21,9 @@
     "mysql-model": "0.0.3",
     "nodemon": "^2.0.7",
     "officegen": "^0.6.5"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   }
 }
