--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fullstackcovid",
+  "name": "za",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-    "engines": {
+  "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
   },
@@ -26,5 +26,4 @@
     "nodemon": "^2.0.7",
     "officegen": "^0.6.5"
   }
-
 }
