--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "ng build",
-    "heroku-postbuild": "ng build --prod --aot"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
