--- a/package.json
+++ b/package.json
@@ -3,26 +3,16 @@
   "version":"1.0.0",
   "description":"",
   "main":"index.js",
-  "engines": {
+  "engines":{
     "node":"12.16.1",
     "npm":"6.13.4"
   },
   "scripts":{
-    "start":"node index.js",
-    "heroku-postbuild":"ng build --prod"
+    "start":"node index.js"
   },
   "author":"",
   "license":"ISC",
   "dependencies":{
-    "bcrypt":"^5.0.1",
-    "body-parser":"^1.19.0",
-    "cors":"^2.8.5",
-    "express":"^4.17.1",
-    "express-list-endpoints":"^5.0.0",
-    "jsonwebtoken":"^8.5.1",
-    "mysql":"^2.18.1",
-    "mysql-model":"0.0.3",
-    "nodemon":"^2.0.7",
-    "officegen":"^0.6.5"
+    "express":"^4.17.1"
   }
 }
