--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name":"za",
-  "version":"1.0.0",
-  "description":"",
-  "main":"index.js",
-  "engines":{
-    "node":"12.16.1",
-    "npm":"6.13.4"
+  "name": "js-fundamentals-test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "scripts":{
-    "start":"node index.js"
-  },
-  "author":"",
-  "license":"ISC",
-  "dependencies":{
-    "express":"^4.17.1"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
   }
 }
