--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "socket.io": "^2.1.1"
+    "express-list-endpoints": "^5.0.0"
   }
 }
