--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "express-list-endpoints": "^5.0.0"
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express-list-endpoints": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "mysql-model": "0.0.3",
+    "nodemon": "^2.0.7",
+    "officegen": "^0.6.5"
   }
 }
