--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "express-list-endpoints": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
+  },
+   "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   }
 }
