--- a/package.json
+++ b/package.json
@@ -11,15 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express-list-endpoints": "^5.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
-  },
-   "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.4"
+    "express": "^4.16.3",
+    "express-list-endpoints": "^5.0.0"
   }
 }
