--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-list-endpoints": "^5.0.0"
+  },
+   "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   }
 }
