--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "4.17.1",
     "express-list-endpoints": "^5.0.0"
   },
-   "engines": {
+  "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
   }
