--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.1.1"
+    "express-list-endpoints": "^5.0.0"
   },
-   "engines": {
+  "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
   }
