--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-list-endpoints": "^5.0.0"
-  },
-  "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.4"
+    "express-list-endpoints": "^5.0.0",
+    "socket.io": "^2.4.1"
   }
 }
