--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
+    "mysql": "^2.18.1",
     "socket.io": "^2.4.1"
   }
 }
