--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "socket.io": "^2.4.1"
   }
